--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-ÀûÓÃJsoup¶ÔÍøÒ³½øÐÐ·ÖÎö£¬ÓÃJava´úÂëÊµÏÖµÄ²©¿ÍÅúÁ¿µ¼³ö£¬ÔÚUrlÀ¸ÊäÈë²©¿ÍÖ÷Ò³£¬¿ÉÒÔµ¼³öËùÓÐµÄ²©¿Íhtml¸ñÊ½£¬²¢ÇÒ¶Ô²©¿ÍÖÐÍ¼Æ¬Á´½Ó×öÁË·ÖÎö£¬¿ÉÒÔ½«²©¿ÍÖÐµÄËùÓÐÍ¼Æ¬ÏÂÔØµ½±¾µØ£¬ÊµÏÖÁËµ¼³öºóÓëÍøÒ³¿´²©¿ÍµÄ¼¸ºõÍ¬µÈµÄÐ§¹û.htmlÒ³Ãæ
-²¢¶ÔÅÅÐò×öÁËÓÅ»¯,Ê±¼äÉýÐòÅÅÁÐ
+åˆ©ç”¨Jsoupå¯¹ç½‘é¡µè¿›è¡Œåˆ†æžï¼Œ
+ç”¨Javaä»£ç å®žçŽ°çš„åšå®¢æ‰¹é‡å¯¼å‡ºï¼Œåœ¨Urlæ è¾“å…¥åšå®¢ä¸»é¡µï¼Œå¯ä»¥å¯¼å‡ºæ‰€æœ‰çš„åšå®¢htmlæ ¼å¼ï¼Œå¹¶ä¸”å¯¹åšå®¢ä¸­å›¾ç‰‡é“¾æŽ¥åšäº†åˆ†æžï¼Œå¯ä»¥å°†åšå®¢ä¸­çš„æ‰€æœ‰å›¾ç‰‡ä¸‹è½½åˆ°æœ¬åœ°ï¼Œå®žçŽ°äº†å¯¼å‡ºåŽä¸Žç½‘é¡µçœ‹åšå®¢çš„å‡ ä¹ŽåŒç­‰çš„æ•ˆæžœ.htmlé¡µé¢
+å¹¶å¯¹æŽ’åºåšäº†ä¼˜åŒ–,æ—¶é—´å‡åºæŽ’åˆ— ![image](http://www.bureak.com/pics/csdn_blog_export.png)
